tests/multi_return_destructure_arity_bad.stderr
tests/multi_return_destructure_arity_bad.hop:7:2: error: HOP2005: call arity mismatch
